2009-11-12  Chris Fleizach  <cfleizach@apple.com>

        Reviewed by Darin Adler.

        ARIA: add alert type roles
        https://bugs.webkit.org/show_bug.cgi?id=31392

        Test: platform/mac/accessibility/aria-alerts.html

        * accessibility/AccessibilityObject.h:
        * accessibility/AccessibilityRenderObject.cpp:
        * accessibility/mac/AccessibilityObjectWrapper.mm:

2009-11-11  Alexey Proskuryakov  <ap@apple.com>

        Reviewed by Darin Adler.

        https://bugs.webkit.org/show_bug.cgi?id=31386
        Make Mac AuthenticationChallenge usable from cross-platform code

        No change in behavior, so no tests.

        * platform/network/ResourceHandle.cpp:
        (WebCore::ResourceHandle::clearAuthentication):
        * platform/network/ResourceHandleInternal.h:
        (WebCore::ResourceHandleInternal::ResourceHandleInternal):
        Don't store m_currentCFChallenge, which was only used for a single assertion. Unlike the
        NSURLConnection case, CF challenge doesn't carry a sender with it, so the copy in web challenge
        is identical.

        * platform/network/cf/AuthenticationChallenge.h:
        (WebCore::AuthenticationChallenge::setAuthenticationClient): Added a setter to match the new
        Mac interface. Previously, one had to create a new AuthenticationChallenge to replace client.

        * platform/network/cf/ResourceHandleCFNet.cpp:
        (WebCore::ResourceHandle::didReceiveAuthenticationChallenge): Fixed assertions after removal
        of m_currentCFChallenge. Also, there is no need to set client now, as it's guaranteed to
        be already set.

        * platform/network/mac/AuthenticationChallenge.h:
        (WebCore::AuthenticationChallenge::m_sender): Explained the existence of this member to the
        best of my understanding.
        (WebCore::AuthenticationChallenge::m_nsChallenge): Renamed from m_macChallenge to prevent